# wayland-capability-tests

./: .gitignore  README.md
capability-tests/: capability_tests.toml  pyproject.toml
capability-tests/capability_tests/: app.py  config.py  qemu.py  test_utils.py  wayland_client.py
capability-tests/capability_tests/tests/: common_tests.py  test_desktop_portal.py  test_wayland_core.py  test_wlroots.py
docs/: protocols_overview.md
docs/decision_register/: 2507191331-dd-no-nix-vm-test-usage.md
test-runner/: shell.nix
test-runner/nixfiles/: common.nix  common.sh  gnome.nix  gnome.sh  hyprland.nix  hyprland.sh  kde.nix  kde.sh  sway.nix
test-runner/nixfiles/pkgs/: wlanalyzer.nix
test-runner/test_runner/: app.py
